--- a/gb/23/6/23/n14021770.md
+++ b/gb/23/6/23/n14021770.md
@@ -1,63 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>黄子佼缺席主持工作 孟子第73代孙女上阵救场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021774-20230623-CHEERSING-01-600x400.jpg" />
-<h6>因黄子佼事件，余曼曼的新歌记者会当天嘉宾的“孟子第73代孙女”孟庆而上阵救火，展现大将之风，获得满堂喝采。（起而行文化传媒提供）
+<h6>黄子佼因MeToo风波临时缺席余曼曼的新歌记者会，当天嘉宾“孟子第73代孙女”孟庆而上阵救火主持现场，展现大将之风，获得满堂喝采。（起而行文化传媒提供）
 </h6>
 <hr>
-	<p>【大纪元2023年06月24日讯】（大纪元记者林森山报导）台湾艺人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BB%84%E5%AD%90%E4%BD%BC.md#1">黄子佼</a>本月19日卷入MeToo风波，原本他预定要主持歌手<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%99%E6%9B%BC%E6%9B%BC.md#1">余曼曼</a>的新歌记者会，却在记者会开始前一分钟临时取消到场。身为当天嘉宾的“孟子第73代孙女”<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%9F%E5%BA%86%E8%80%8C.md#1">孟庆而</a>得知此事后，挺身而出上阵主持救场。</p>
-<p>自政治圈爆出MeToo事件后，近期也延烧到台湾演艺圈，多位艺人被点名。19日当天，知名主持人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BB%84%E5%AD%90%E4%BD%BC.md#1">黄子佼</a>被爆出10多年前的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%A7%E9%AA%9A%E6%89%B0.md#1">性骚扰</a>事件，让他多年来建立的好形象毁于一旦。</p>
-<p>对此，黄子佼本人也在网上发影片道歉，坦承性骚；但随后他却删影片失联，之后更被通报自残送医。而他当天原定要出席主持的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%99%E6%9B%BC%E6%9B%BC.md#1">余曼曼</a>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%85%A2%E6%85%A2%E7%AD%89%E5%BE%85%E4%BD%A0.md#1">慢慢等待你</a>》新歌记者会也临时缺席，让主办方相当无奈。</p>
-<p>身为当天记者会嘉宾的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%9F%E5%BA%86%E8%80%8C.md#1">孟庆而</a>，同时也是《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%85%A2%E6%85%A2%E7%AD%89%E5%BE%85%E4%BD%A0.md#1">慢慢等待你</a>》单曲的制作人兼词曲创作者，她在得知主持人黄子佼缺席的情况下，在后台直接打电话给执行长梁轩安主动询问：“需不需要帮忙！”</p>
-<p>后来，孟庆而在记者会只延迟5分钟的情况下，上阵救火为记者会主持，拿着没Re过的Rundown，表现大方得体、反应机灵，在主持过程中，让余曼曼现场展现精湛的歌艺。</p>
-<p>此次孟庆而临危受命，也意外开启了她的主持道路，让一度想走人的媒体们纷纷回头，事后她也获得媒体与贵宾的称赞。</p>
-<figure id="attachment_14021776" aria-describedby="caption-attachment-14021776" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14021776-20230623-CHEERSING-02.jpg"><img class="size-large wp-image-14021776" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021776-20230623-CHEERSING-02-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14021776" class="wp-caption-text">孟庆而《跟着星走》音乐会的与会贵宾，包含台北复兴堂主任牧师柳子骏、贤伉俪宋达民、洪百榕夫妇、与吴世正议员受邀出席。（起而行文化传媒提供）</figcaption></figure>
+	<p>【大纪元2023年06月24日讯】（大纪元记者林森山报导）台湾艺人黄子佼本月19日卷入MeToo风波，原本他预定要主持歌手余曼曼的新歌记者会，却在记者会开始前一分钟临时取消到场。身为当天嘉宾的“孟子第73代孙女”孟庆而得知此事后，挺身而出上阵主持救场。</p>
+<p>自政治圈爆出MeToo事件后，近期也延烧到台湾演艺圈，多位艺人被点名。19日当天，知名主持人黄子佼被爆出10多年前的性骚扰事件，让他多年来建立的好形象毁于一旦。</p>
+<p>对此，黄子佼本人也在网上发影片道歉，坦承性骚；但随后他却删影片失联，之后更被通报自残送医。而他当天原定要出席主持的余曼曼《慢慢等待你》新歌记者会也临时缺席，让主办方相当无奈。</p>
+<p>身为当天记者会嘉宾的孟庆而，同时也是《慢慢等待你》单曲的制作人兼词曲创作者，她在得知主持人黄子佼缺席的情况后，在后台直接打电话给执行长梁轩安主动询问：“需不需要帮忙！”</p>
+<p>后来，孟庆而在记者会只延迟5分钟的情形下，上阵救火为记者会主持，拿着没Re过的Rundown，表现大方得体、反应机灵，在主持过程中，让余曼曼现场展现出精湛的歌艺。</p>
+<p>此次孟庆而临危受命，也意外开启了她的主持道路，让一度想走人的媒体们纷纷回头，事后她也获得媒体与到场贵宾的称赞。</p>
+<figure id="attachment_14021776" aria-describedby="caption-attachment-14021776" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14021776-20230623-CHEERSING-02.jpg"><img decoding="async" class="size-large wp-image-14021776" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021776-20230623-CHEERSING-02-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14021776" class="wp-caption-text">孟庆而《跟着星走》音乐会的与会贵宾，包含台北复兴堂主任牧师柳子骏、贤伉俪宋达民（右2）、洪百榕（右3）夫妇与吴世正议员受邀出席。（起而行文化传媒提供）</figcaption></figure>
 <p>在余曼曼的记者会顺利落幕后，孟庆而也没闲下来，因为当晚就是她睽违四年的“跟着星走”创作演唱会。</p>
-<p>演唱会中，孟庆而不断提到她的信仰，表示“跟着星走”的星就是上帝，而现场乐手也都是同教会的专业音乐人，因此她觉得特别有默契。她也勉励大家在疫情后都能突破自我，肯定自我，找到自我的价值与方向。</p>
+<p>演唱会中，孟庆而不断提到她的信仰，表示“跟着星走”的星就是上帝，而现场乐手也都是有同样信仰的专业音乐人，因此她觉得特别有默契。她也勉励大家在疫情后都能突破自我，肯定自我，找到自我的价值与方向。</p>
 <p>孟庆而当天连唱了17首全创作歌曲，并落泪喊出：“是上帝给我勇气，让我们在这里相遇！”演唱会上，明星夫妇档宋达民、洪百榕与资深歌手洪荣宏大哥、女星萝莉塔等多位艺人到场支持。</p>
-<figure id="attachment_14021775" aria-describedby="caption-attachment-14021775" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14021775-20230623-CHEERSING-03.jpg"><img class="size-large wp-image-14021775" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021775-20230623-CHEERSING-03-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14021775" class="wp-caption-text">《跟着星走》创作演唱会，萝莉塔（左）到场支持并与孟庆而（右）合影留念。（起而行文化传媒提供）</figcaption></figure>
+<figure id="attachment_14021775" aria-describedby="caption-attachment-14021775" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14021775-20230623-CHEERSING-03.jpg"><img decoding="async" class="size-large wp-image-14021775" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021775-20230623-CHEERSING-03-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14021775" class="wp-caption-text">《跟着星走》创作演唱会，萝莉塔（左）到场支持并与孟庆而（右）合影留念。（起而行文化传媒提供）</figcaption></figure>
 <p>责任编辑：刘宇涵</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/28/n10597778.md#1">【新闻看点】大陆Metoo蔓延 一天曝1700多例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/11/n13882477.md#1">洪荣宏首登小巨蛋开唱 谈诗玲等多位嘉宾助阵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011774.md#1">【十字路口】性骚扰指控笼罩台政坛 牵动大选？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018743.md#1">黄子佼认性骚扰后送医 孟耿如：会陪他一起面对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/28/n10597778.md#1">【新闻看点】大陆Metoo蔓延 一天曝1700多例</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/11/n13882477.md#1">洪荣宏首登小巨蛋开唱 谈诗玲等多位嘉宾助阵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/7/n14011774.md#1">【十字路口】性骚扰指控笼罩台政坛 牵动大选？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/19/n14018743.md#1">黄子佼认性骚扰后送医 孟耿如：会陪他一起面对</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018137.md#1">斯里兰卡男童转生佛教家庭 知前世为基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014437.md#1">古代不贺夏至  节俗中蕴含什么深机？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013202.md#1">端午节九大风俗 内涵与历史渊源知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014582.md#1">刘备占蜀地是天意 孙权身边异士透天机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14015875.md#1">凡间异事破迷雾 苍宇圣王度红尘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021595.md#1">【新闻大破解】莫迪高调访美 美印合作中共心惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021250.md#1">【未解之谜】UFO美国赌城坠毁 外星人出现了？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020989.md#1">【百年真相】中共是靠“国外敌对势力”养大的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020994.md#1">工人罢工在即 波音最大供应商堪萨斯工厂停产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020974.md#1">在北大举牌吁“废黜一党极权”男子被带走</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020968.md#1">泰坦潜艇残骸寻获 无人生还</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020832.md#1">谣传假视障 萧煌奇摘墨镜自清：愿世人保持良善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019911.md#1">唐嫣谈夫妻相处模式：因拍戏分居格外珍惜相聚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020674.md#1">受黄子佼性骚扰风波影响 孟耿如无奈请辞新戏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021138.md#1">因讽毛魔头遭封杀 毕福剑现身小县城开三轮车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019986.md#1">泰勒丝宣布2024国际巡回演唱 首站日本东京</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020205.md#1">如何赶走苍蝇？ 专家分享省钱的天然方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020569.md#1">小苏打洗衣2个简单配方 令夏季衣物清洁无异味</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019213.md#1">抽筋是因为缺钙？这5个症状可能是缺镁 5类食物补镁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019719.md#1">生酮饮食饿死癌细胞但有副作用 专家：1方法能翻转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000336.md#1">你的衣物中含有毒性 “永久化学品”吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309835.md#1">【探索时分】库尔斯克战役开打 海马斯围点打援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310090.md#1">【新闻欣视角】两大异常！中南海必有事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309769.md#1">【未解之谜】震惊泰国的当代现世报：无法逃脱的业力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/23/n14021770.htm">黄子佼缺席主持工作 孟子第73代孙女上阵救场</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021770.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/23/n14021770.htm">黄子佼缺席主持工作 孟子第73代孙女上阵救场</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/23/n14021770.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
